# UESTC-ACM-EXERCISES

./: .gitignore  CMakeLists.txt
Contest/: A.cpp  B.cpp  D.cpp  I.cpp  P.cpp  print.out
Exercise1/: A.cpp  B.cpp  C-大整数重新排列.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp
Exercise2/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F-一道简单的数学题.cpp  G-P酱野外冒险.cpp  H-E国修铁路.cpp  I-昊昊喜欢运动.cpp  I-昊昊爱运动.cpp  J-人民币的构造.cpp  K-倒推数组.cpp  L-矩阵.cpp  M-FlyThrough.cpp  N-点球大战(penalty).cpp
Others/: 0288.青蛙的约会.cpp
