cmake_minimum_required(VERSION 3.26)
project(ACM)

set(CMAKE_CXX_STANDARD 17)

add_executable(ACM
        #Exercise1/A.cpp
        #Exercise1/B.cpp
        Exercise1/C.cpp
        #Exercise1/D.cpp
        #Exercise1/E.cpp
        #Exercise1/F.cpp
        #Exercise1/G.cpp
        #Exercise1/H.cpp
        #Exercise1/I.cpp
        #Exercise1/J.cpp
        #main.cpp

)
