cmake_minimum_required(VERSION 3.26)
project(ACM)

set(CMAKE_CXX_STANDARD 17)

add_executable(ACM
        #main.cpp
        #Exercise1/A.cpp
        #Exercise1/B.cpp
        #Exercise1/C-大整数重新排列.cpp
        #Exercise1/D.cpp
        #Exercise1/E.cpp
        #Exercise1/F.cpp
        #Exercise1/G.cpp
        #Exercise1/H.cpp
        #Exercise1/I.cpp
        #Exercise1/J.cpp
        #Exercise2/A.cpp
        #Exercise2/B.cpp
        #Exercise2/C.cpp
        #Exercise2/D.cpp
        #Exercise2/E.cpp
        #Exercise2/F-一道简单的数学题.cpp
        #Exercise2/G-P酱野外冒险.cpp
        #Exercise2/H-E国修铁路.cpp
        #Exercise2/I-昊昊爱运动.cpp
        #Exercise2/J-人民币的构造.cpp
        #Exercise2/K-倒推数组.cpp
        #Exercise2/L-矩阵.cpp
        #Exercise2/M-FlyThrough.cpp
        "Exercise2/N-点球大战(penalty).cpp"
)
